--- a/src/main/java/com/mycompany/engsoft/MonitoramentoGUI.form
+++ b/src/main/java/com/mycompany/engsoft/MonitoramentoGUI.form
@@ -412,6 +412,11 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField7">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="14" style="0"/>
+                </Property>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
